Fix accumulated screens
Fixes #207